@@ -1,3 +1,7 @@
+2011-08-01  Tristan Gingold  <gingold@adacore.com>
+
+	* frags.c (frag_grow): Simplify the code.
+
 2011-07-30  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* config/tc-mips.c (nops_for_vr4130): Revert previous commit.
